hphp/hack/test/typecheck/reactive/rx_mutable4.php.exp
File "rx_mutable4.php", line 13, characters 8-26:
\HH\Rx\mutable can only be used in reactive functions (Typing[4242])
